--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "sqlite3": "^5.1.7"
+    "react-icons": "^5.5.0",
+    "sqlite3": "^5.1.7",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
